@@ -79,3 +79,14 @@ log4j.appender.outa=org.apache.log4j.ConsoleAppender
 log4j.appender.outa.Target=System.out
 log4j.appender.outa.layout=org.apache.log4j.PatternLayout
 log4j.appender.outa.layout.ConversionPattern=%d{MM-dd/HH:mm:ss} %5p [%t] %c{1} - %m%n
+
+# sent mails
+log4j.logger.ru.bgcrm.util.MailMsg=INFO, mail
+log4j.appender.mail=org.apache.log4j.RollingFileAppender
+log4j.appender.mail.layout=org.apache.log4j.PatternLayout
+log4j.appender.mail.layout.ConversionPattern=%d{MM-dd/HH:mm:ss} %5p [%t] %c{1} - %m%n
+log4j.appender.mail.encoding=UTF-8
+log4j.appender.mail.File=./log/mail.log
+log4j.appender.mail.Append=true
+log4j.appender.mail.MaxBackupIndex=5
+log4j.appender.mail.MaxFileSize=10MB
