@@ -1,1 +1,2 @@
-TODODOC A: Plugin Agree.
+A: Plugin Agree. https://bgerp.org/version/3.0/doc/plugin/pln/agree
+A: Logging sent mails to mail.log
